[package]
name = "password_manager"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rpassword = "7.4.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
bincode = "1.3"
clearscreen = "4.0.2"
arboard = "3.2"
secrecy = {version = "0.8", features = ["serde"]}
csv = "1.3"
crossterm = "0.27"
