[package]
name = "password_manager"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rpassword = "7.4.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
bincode = "1.3"
arboard = { version = "3.2", default-features = false }
secrecy = {version = "0.8", features = ["serde"]}
crossterm = "0.27"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
